<resources>
    <!-- App -->
    <string name="app_name">Playlist maker</string>
    <string name="app_font_family">YS Display</string>

    <!-- Captions -->
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="setting">Настройки</string>
    <string name="black_theme">Тёмная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддежку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="developer">https://practicum.yandex.ru/android-developer/</string>
    <string name="offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="mail_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="my_email">yantsabut777@yandex.ru</string>
    <string name="reload">Обновить</string>
    <string name="no_data_found">Ничего не нашлось</string>
    <string name="connect_error">Проблемы со связью</string>
    <string name="connect_error_description">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="bad_connection">Проблемы со связью\n\n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="server_error">На сервере произошла ошибка</string>
    <string name="clear_history">Очистить историю</string>
    <string name="search_text">Вы искали</string>
    <string name="single_name">Альбом</string>
    <string name="genre">Жанр</string>
    <string name="country_by_artist">Страна</string>
    <string name="time_by_track">Длительность</string>
    <string name="year_by_track">Год</string>
    <string name="player_start_position">00:00</string>
    <string name="unknown">n/a</string>
    <string name="empty_medialibrary">Ваша медиатека пуста</string>
    <string name="not_create_playlist">Вы не создали \n ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favourites_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="name_hint">Название*</string>
    <string name="description_hint">Описание</string>
    <string name="text_for_button">Создать</string>
    <string name="track_already_added">Трек уже добавлен в плейлист</string>
    <string name="track_added">Добавлено в плейлист</string>
    <string name="data_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="complete_playlist">Завершить задание плейлиста</string>
    <string name="add_playlist">Добавлен новый плейлист</string>


    <!--PlaylistInfoFragment-->

    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_track_title">Удалить трек</string>
    <string name="delete_track_message">Хотите удалить трек?</string>
    <string name="delete_playlist_title">Удалить плейлист</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="ok">OK</string>
    <string name="share_empty_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="delete_playlist_ask">Хотите удалить плейлист?</string>

    <!--/PlaylistInfoFragment-->

    <!--EditPlaylistFragment-->

    <string name="edit_current_playlist">Редактировать</string>
    <string name="save_button_edit">Сохранить</string>

    <!--/EditPlaylistFragment-->


</resources>