<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondaryVariant"
    android:orientation="vertical"
    tools:ignore="UseSwitchCompatOrMaterialXml">

    <TextView
        android:id="@+id/settings_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:drawablePadding="28dp"
        android:drawableTint="?attr/colorOnSecondary"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/setting"
        android:textColor="?attr/colorOnSecondary"
        android:textFontWeight="500"
        android:textSize="@dimen/text_normal"
        app:drawableStartCompat="@drawable/arrow_back" />

    <Switch
        android:id="@+id/theme_switcher"
        style="@style/TextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginHorizontal="@dimen/padding_large"
        android:layout_marginTop="40dp"
        android:height="@dimen/height_for_settings"
        android:text="@string/black_theme" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_for_settings"
        android:paddingStart="@dimen/padding_large"
        android:paddingEnd="@dimen/padding_large">

        <TextView
            android:id="@+id/share_app"
            style="@style/TextStyle"
            android:text="@string/share" />

        <ImageView
            style="@style/ImageStyle"
            android:src="@drawable/share"
            app:tint="@color/icon_default_color"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_for_settings"
        android:paddingStart="@dimen/padding_large"
        android:paddingEnd="@dimen/padding_large">

        <TextView
            android:id="@+id/write_in_support"
            style="@style/TextStyle"
            android:text="@string/support" />

        <ImageView
            style="@style/ImageStyle"
            android:src="@drawable/support"
            app:tint="@color/icon_default_color"
            />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_for_settings"
        android:paddingStart="@dimen/padding_large"
        android:paddingEnd="@dimen/padding_large">

        <TextView
            android:id="@+id/user_agreement"
            style="@style/TextStyle"
            android:text="@string/agreement" />

        <ImageView
            style="@style/ImageStyle"
            android:src="@drawable/arrow_forward"
            app:tint="@color/icon_default_color"/>

    </FrameLayout>

</LinearLayout>