<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    android:padding="@dimen/header_padding"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/header_text_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/content_margin">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:textColor="@color/text_color"
            app:icon= "@drawable/search"
            app:iconGravity="textStart"
            app:cornerRadius="@dimen/button_corner_radius"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/icon_color"
            android:id="@+id/search_button"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/library"
            android:textColor="@color/text_color"
            app:cornerRadius="@dimen/button_corner_radius"
            app:icon= "@drawable/library"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/icon_color"
            android:id="@+id/library_button"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/setting"
            android:textColor="@color/text_color"
            app:cornerRadius="@dimen/button_corner_radius"
            app:icon= "@drawable/setting"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/icon_color"
            android:id="@+id/setting_button"
            />

    </LinearLayout>

</LinearLayout>