<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.Playlist_Maker"
    tools:context=".settings.ui.SettingFragment">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height">

        <TextView
            android:id="@+id/settingsTextView"
            style="@style/TextViewToolbarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting" />

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        style="@style/SettingsActivityFrameLayoutButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_l_normal">

        <TextView
            android:id="@+id/chooseThemeTextView"
            style="@style/SettingsActivityTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/black_theme"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            style="@style/SettingsActivitySwitchStyle"
            android:id="@+id/themeSwitcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/layout_margin_end_for_switch"/>


    </FrameLayout>

    <FrameLayout
        android:id="@+id/shareAppFrameLayout"
        style="@style/SettingsActivityFrameLayoutButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/shareAppTextView"
            style="@style/SettingsActivityTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"/>

        <ImageView
            android:id="@+id/shareAppImageView"
            style="@style/ActivityImageViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/padding_large"
            app:srcCompat="@drawable/share" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/supportFrameLayout"
        style="@style/SettingsActivityFrameLayoutButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/writeToSupportTextView"
            style="@style/SettingsActivityTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/support"/>

        <ImageView
            android:id="@+id/writeToSupportImageView"
            style="@style/ActivityImageViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/padding_large"
            app:srcCompat="@drawable/support"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/agreementFrameLayout"
        style="@style/SettingsActivityFrameLayoutButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/userAgreementTextView"
            style="@style/SettingsActivityTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agreement"/>

        <ImageView
            android:id="@+id/userAgreementImageView"
            style="@style/ActivityImageViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/padding_large"
            app:srcCompat="@drawable/arrow_forward"/>
    </FrameLayout>

</LinearLayout>