<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".new_playlist.ui.NewPlaylistFragment"
    android:theme="@style/Theme.Playlist_Maker">

    <ImageView
        style="@style/BackArrowPlayListScreenStyle"
        android:id="@+id/backArrowNewPlaylist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:srcCompat="@drawable/arrow_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/new_playlist_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_playlist"
        android:textSize="22sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/backArrowNewPlaylist"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/load_image_cardview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="42dp"
        android:layout_marginHorizontal="24dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/new_playlist_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/load_image_imageview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/load_picture_placeholder"
            android:scaleType="center"
            android:background="@drawable/load_picture_shape"

            />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/new_playlist_button"
        style="@style/NewPlaylistButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="32dp"
        android:paddingVertical="16dp"
        android:text="@string/text_for_button"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextFieldName"

        style="@style/TextInputLayoutStyleNewPlaylist"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/load_image_cardview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!--this is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_name_new_playlist"
            android:hint="@string/name_hint"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextFieldDescription"

        style="@style/TextInputLayoutStyleNewPlaylist"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filledTextFieldName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_description_new_playlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_hint" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
