<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"/>

    <ImageView
        style="@style/BackArrowPlayListScreenStyle"
        android:id="@+id/backArrowPlaylist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="4dp"
        app:srcCompat="@drawable/arrow_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/startGuideline"/>

    <ImageView
        android:id="@+id/coverMax"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="46dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@id/trackName"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/backArrowPlaylist"
        tools:src="@drawable/track_placeholder_max" />

    <TextView
        style="@style/TextViewMaxFontPlayListScreenStyle"
        android:id="@+id/trackName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="8dp"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/coverMax"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"
        tools:text="Yesterday (Remastered 2009)"/>

    <TextView
        style="@style/TextViewMiddleFontPlayListScreenStyle"
        android:id="@+id/artistName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintTop_toBottomOf="@id/trackName"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"
        tools:text="The Beatles"/>

    <TextView
        style="@style/TextViewSmallFontPlayListScreenStyle"
        android:id="@+id/countryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        android:text="@string/country_by_artist"/>

    <TextView
        style="@style/TextViewSmallRightFontPlayListScreenStyle"
        android:id="@+id/countryName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:gravity="end"
        app:layout_constraintBaseline_toBaselineOf="@+id/countryLabel"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"
        app:layout_constraintStart_toEndOf="@id/countryLabel"
        tools:text="Великобритания" />

    <TextView
        style="@style/TextViewSmallFontPlayListScreenStyle"
        android:id="@+id/genreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintBottom_toTopOf="@id/countryLabel"
        android:text="@string/genre"/>

    <TextView
        style="@style/TextViewSmallRightFontPlayListScreenStyle"
        android:id="@+id/genreName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:gravity="end"
        app:layout_constraintBaseline_toBaselineOf="@+id/genreLabel"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"
        app:layout_constraintStart_toEndOf="@id/genreLabel"
        tools:text="Rock" />

    <TextView
        style="@style/TextViewSmallFontPlayListScreenStyle"
        android:id="@+id/yearLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintBottom_toTopOf="@id/genreLabel"
        android:text="@string/year_by_track"/>

    <TextView
        style="@style/TextViewSmallRightFontPlayListScreenStyle"
        android:id="@+id/yearName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:gravity="end"
        app:layout_constraintBaseline_toBaselineOf="@+id/yearLabel"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"
        app:layout_constraintStart_toEndOf="@id/yearLabel"
        tools:text="1965" />

    <TextView
        style="@style/TextViewSmallFontPlayListScreenStyle"
        android:id="@+id/albumLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintBottom_toTopOf="@id/yearLabel"
        android:text="@string/single_name"/>

    <TextView
        style="@style/TextViewSmallRightFontPlayListScreenStyle"
        android:id="@+id/albumName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:gravity="end"
        app:layout_constraintBaseline_toBaselineOf="@+id/albumLabel"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"
        app:layout_constraintStart_toEndOf="@id/albumLabel"
        tools:text="Yesterday (Remastered 2009)" />


    <TextView
        style="@style/TextViewSmallFontPlayListScreenStyle"
        android:id="@+id/durationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintBottom_toTopOf="@id/albumLabel"
        android:text="@string/time_by_track"/>

    <TextView
        style="@style/TextViewSmallRightFontPlayListScreenStyle"
        android:id="@+id/durationName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:gravity="end"
        app:layout_constraintBaseline_toBaselineOf="@+id/durationLabel"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"
        app:layout_constraintStart_toEndOf="@id/durationLabel"
        tools:text="5:35" />

    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/play_button"
        android:background="@null"
        app:layout_constraintTop_toBottomOf="@id/artistName"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"
        android:layout_marginTop="38dp"
        />

    <ImageButton
        android:id="@+id/favoritesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:srcCompat="@drawable/favourites_button"
        android:background="@null"
        app:layout_constraintTop_toTopOf="@id/playButton"
        app:layout_constraintBottom_toBottomOf="@id/playButton"
        app:layout_constraintStart_toStartOf="@id/startGuideline"/>

    <ImageButton
        android:id="@+id/likeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:srcCompat="@drawable/like_button"
        android:background="@null"
        app:layout_constraintTop_toTopOf="@id/playButton"
        app:layout_constraintBottom_toBottomOf="@id/playButton"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"/>

    <TextView
        style="@style/TextViewDurationInTimeFontPlayListScreenStyle"
        android:id="@+id/durationInTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="39dp"
        app:layout_constraintBottom_toTopOf="@+id/durationLabel"
        app:layout_constraintEnd_toStartOf="@+id/endGuideline"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/playButton"
        app:layout_constraintVertical_bias="0.0"
        android:text="@string/player_start_position"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>