<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".search.ui.SearchFragment"
    android:theme="@style/Theme.Playlist_Maker">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height">

        <TextView
            android:id="@+id/settingsTextView"
            style="@style/TextViewToolbarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search" />

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/layout_margin_horizontal"
        android:layout_marginTop="@dimen/layout_margin_top_8dp"
        android:background="@drawable/shape_for_search_frame_layout">

        <ImageView
            style="@style/DefaultImageViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/layout_margin_start_16dp"
            android:background="@color/pale_grey"
            android:src="@drawable/lens_vector" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/inputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_start_32dp"
            android:backgroundTint="@color/pale_grey"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="@color/moderately_black"
            android:textSize="@dimen/text_small" />

        <ImageView
            android:id="@+id/clearIcon"
            style="@style/DefaultImageViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/layout_margin_end_16dp"
            android:background="@color/pale_grey"
            android:src="@drawable/button_clear"
            android:visibility="gone" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp" />

        <LinearLayout
            android:id="@+id/not_found_widget"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                style="@style/SearchingActivityNotFoundMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="110dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/no_data_found"
                android:textSize="@dimen/text_midle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bad_connection_widget"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                style="@style/SearchingActivityBadConnectionMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="110dp" />

            <TextView
                android:id="@+id/bad_connection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textSize="@dimen/text_midle"
                tools:text="Проблемы со связью \n\nЗагрузка не удалась. Проверьте подключение к интернету" />

            <Button
                android:id="@+id/create_playlist_button"
                style="@style/SearchingActivityButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:text="@string/reload"
                android:textAllCaps="false"
                android:textSize="@dimen/small_medium_font_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/history_widget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_weight="0"
                android:text="Вы искали"
                android:textAlignment="center"
                android:textSize="@dimen/text_midle" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/history_recycle_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/clear_history_button"
                style="@style/SearchingActivityButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:layout_weight="0"
                android:text="@string/clear_history"
                android:textAllCaps="false"
                android:textSize="@dimen/small_medium_font_size" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/progress_bar"
            android:visibility="visible" />


    </FrameLayout>

</LinearLayout>

